# Image-background-removal

./: .gitignore  README.md  function_app.py  pyproject.toml  requirements.txt
app/core/: config.py
app/managers/: manager.py
app/services/: service.py
app/utils/: image_utils.py
